# hoa-citations

./: README.md  citations.json5  gen_html.py  pyproject.toml  scrape_citations.py
data/: 10.15151--ESRF-DC-1634390196.json  10.15151--ESRF-DC-1659198604.json  10.15151--ESRF-DC-1659198612.json  10.15151--ESRF-DC-1659198620.json  10.15151--ESRF-DC-1659198628.json  10.15151--ESRF-DC-1659198636.json  10.15151--ESRF-DC-1659198644.json  10.15151--ESRF-DC-1659302202.json  10.15151--ESRF-DC-1659302210.json  10.15151--ESRF-DC-1659302218.json  10.15151--ESRF-DC-1659302226.json  10.15151--ESRF-DC-1659302234.json  10.15151--ESRF-DC-1659302242.json  10.15151--ESRF-DC-1659302250.json  10.15151--ESRF-DC-1659306658.json  10.15151--ESRF-DC-1659306674.json  10.15151--ESRF-DC-1659306682.json  10.15151--ESRF-DC-1659306690.json  10.15151--ESRF-DC-1659306698.json  10.15151--ESRF-DC-1659333806.json  10.15151--ESRF-DC-1659333814.json  10.15151--ESRF-DC-1659333822.json  10.15151--ESRF-DC-1659333830.json  10.15151--ESRF-DC-1659333838.json  10.15151--ESRF-DC-1659333846.json  10.15151--ESRF-DC-1659341854.json  10.15151--ESRF-DC-1659341862.json  10.15151--ESRF-DC-1659341870.json  10.15151--ESRF-DC-1659341878.json  10.15151--ESRF-DC-1659341886.json  10.15151--ESRF-DC-1773961413.json  10.15151--ESRF-DC-1773964905.json  10.15151--ESRF-DC-1773965443.json  10.15151--ESRF-DC-1773965451.json  10.15151--ESRF-DC-1773966217.json  10.15151--ESRF-DC-1773966407.json  10.15151--ESRF-DC-1773966439.json  10.15151--ESRF-DC-1773967605.json  10.15151--ESRF-DC-2008212555.json  10.15151--ESRF-DC-2014789944.json  (+30 more)
(+6 files in other folders)
