[project]
name = "hoa-citations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "json5>=0.12.1",
    "markdown>=3.10",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "requests-cache>=1.2.1",
    "rich>=14.2.0",
]
